2013-05-02  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (report-section-filter): Match report as
	section-filter mode. Remove report parameter.
	(report [hosts], report [ports], report [closed_cves])
	(report [summary]): Adjust section-filter template call.

2013-05-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (user-tags-window): Change Icon for "Add Tag" to
	"new.png".

2013-05-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_result): Make the command params optional, in case
	the user crafts the URL by hand.

2013-04-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (user_find): Add token bad or missing return.
	(request_handler): For GET requests, serve the login page when the token
	is bad or missing.

2013-04-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-user-form): Correct name in comment.
	(user [edit]): Add dummy input to force Save button to be default.

2013-04-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (html-create-note-form, html-edit-note-form)
	(html-create-override-form, html-edit-override-form, result [details])
	(get_reports_response/report/report [details]): Add div and table around
	result-detailed call.
	(result [result-header]): Don't fix table cells sizes.
	(result [result-body]): Include content as part of global result table
	and adjust accordingly.
	(result-detailed [detailed]): Let caller adjust surrounding div and table.

	* src/html/gsa-style.css: Add issue_box_all, remove issue_box_head and
	clean issue_box_box classes.

2013-04-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (result [result-header]): Remove extra line break.

2013-04-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (result [result-body]): New template.
	(result-detailed [details]): Refactor code into result-body template.
